# pybind11-protobuf-minimal-starter

./: .bazelrc  .dockerignore  BUILD.bazel  CMakeLists.txt  helloworld_pybind.cpp  pyhelloworld_test.py
.github/workflows/: amd64_docker_cmake.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml
cmake/: Makefile
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/manylinux/: Dockerfile
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
patches/: pybind11-v2.13.6.patch
